# Umi-OCR

./: .gitignore  .gitignore_backup  .pre_settings  LICENSE  README.md  REFACTOR_PLAN.md  Umi-OCR预处理流程修复优化报告.md  Umi-OCR预处理流程分析报告.md  build_nuitka.py  build_nuitka_backup.py  check_syntax.py  check_types.py  main.py  pyproject.toml  release.py  requirements.txt  test_fix.py  test_model_download.py  test_settings_fix.py  type_check_results.json  代码检查工具使用说明.md
.claude/: settings.local.json
.qoder/specs/: REFACTOR_PLAN.md
.trae/documents/: Resolve 10+ TODOs in the codebase.md  修改主界面为标签页布局.md  执行重构计划第20阶段：设置界面 (Execute Refactor Plan Phase 20_ Settings Interface).md  现有代码与重构计划偏差评估与后续建议.md  程序梳理与修复报告.md
UmiOCR-data/: .pre_settings  .settings  Help 帮助.txt  about.json  config.json  main.py  qrcode_history.json
UmiOCR-data/logs/: log_2025-09-09.jsonl.txt  log_2026-01-23.jsonl.txt
UmiOCR-data/plugins/win_linux_PaddleOCR-json/: PPOCR_config.py
UmiOCR-data/py_src/: run.py
UmiOCR-data/py_src/event_bus/: pubsub_connector.py
UmiOCR-data/py_src/image_controller/: ImageQt.py  image_provider.py  screenshot_controller.py
UmiOCR-data/py_src/imports/: call_func.py
UmiOCR-data/py_src/mission/: doc_preview_connector.py  simple_mission.py
UmiOCR-data/py_src/plugins_controller/: plugins_connector.py
UmiOCR-data/py_src/server/: doc_server.py  web_server.py
UmiOCR-data/py_src/tag_pages/: ScreenshotOCR.py  page.py  tag_pages_connector.py
UmiOCR-data/py_src/utils/: file_finder.py  i18n_configs.py  utils.py
UmiOCR-data/qt_res/qml/: Main.qml
UmiOCR-data/tasks/: task_queue.json
docs/: STAGE_13_17_ANALYSIS.md  phase1_completion_report.md  stage_9_12_completion_summary.md
logs/: log_2026-01-24.jsonl.txt  log_2026-01-25.jsonl.txt  log_2026-01-26.jsonl.txt  log_2026-01-27.jsonl.txt  log_2026-01-28.jsonl.txt  log_2026-01-29.jsonl.txt
resources/: Main.qml
resources/ApiManager/: OcrManager.qml
resources/Configs/: Configs.qml  GlobalConfigs.qml  Settings_.qml
resources/ImageManager/: ScreenshotManager.qml  ScreenshotWindowComp.qml
resources/MainWindow/: MainWindowManager.qml  SystemTray.qml
resources/Popup_/: MessageBox.qml  MessageSimpleComp.qml  PopupManager.qml
resources/TabBar_/: BarManager.qml  HTabBar.qml  TabButton_.qml
resources/TabPages/: PagesManager.qml
resources/TabPages/About/: About.qml
resources/TabPages/InvoiceOCR/: InvoiceOCR.qml  InvoiceOCRConfigs.qml  InvoiceResultsView.qml
resources/TabPages/ScreenshotOCR/: ScreenshotOCR.qml
resources/TabPages/TableOCR/: TableOCR.qml  TableOCRConfigs.qml
resources/Widgets/: Button_.qml  CtrlBar.qml  CtrlBarButton.qml  FilesTableView.qml  Loading.qml  TabPanel.qml
resources/Widgets/ImageViewer/: ImageScale.qml  ImageWithText.qml
resources/Widgets/ResultLayout/: ResultTextContainer.qml  ResultsTableView.qml
resources/i18n/: en_US.json  zh_CN.json
scripts/: analyze_paddle_config.py  compile_ui.py  validate_paddle_models.py  verify_paddle_import.py
src/: app.py  cli_handler.py  main.py  run.py  umi_about.py  umi_log.py
src/controllers/: batch_doc_controller.py  batch_ocr_controller.py  main_controller.py  qrcode_controller.py  screenshot_controller.py  settings_controller.py
src/event_bus/: __init__.py  pubsub_service.py
src/event_bus/key_mouse/: keyboard.py
src/image_controller/: image_connector.py  screenshot_controller.py
src/imports/: umi_about.py  umi_log.py
src/mission/: mission.py  mission_connector.py  mission_invoice.py  mission_ocr.py  mission_structure.py
src/models/: config_model.py  model_cache.json
src/ocr/: paddleocr_direct.py
src/ocr/api/: __init__.py
src/ocr/engines/: __init__.py  alibaba_ocr.py  baidu_ocr.py  base.py  cloud_api_base.py  paddle_chat.py  paddle_ocrv5.py  paddle_structure.py  paddle_vl.py  tencent_ocr.py
src/ocr/output/: output_csv.py  table_converter.py
src/platform/: __init__.py
src/platform/win32/: hotkey_manager.py
src/server/: cmd_client.py
src/services/export/: __init__.py  base_exporter.py  excel_exporter.py  json_exporter.py  pdf_exporter.py  text_exporter.py  word_exporter.py
src/services/ocr/: __init__.py  base_engine.py  engine_manager.py  example_usage.py  model_download_config.py  model_manager.py  ocr_result.py  paddle_engine.py
src/services/pdf/: __init__.py  pdf_parser.py
src/services/qrcode/: __init__.py  qrcode_generator.py  qrcode_scanner.py
src/services/screenshot/: __init__.py  magnifier.py  region_selector.py  screen_capture.py  window_detector.py
src/tag_pages/: InvoiceOCR.py  TableOCR.py  tag_pages_connector.py
src/tests/: __init__.py  test_config.py  test_dependency_install.py  test_e2e_integration.py  test_engine_manager.py  test_i18n.py  test_logger.py  test_magnifier.py  test_ocr_engines.py  test_paddle_engine.py  test_qrcode_scanner_performance.py  test_settings_search.py  test_stage_13_17_integration.py  test_task_model.py  verify_stage_9_12.py
src/utils/: app_opengl.py  call_func.py  check_dependencies.py  config_manager.py  credential_manager.py  dependency_installer.py  file_finder.py  global_configs_connector.py  gpu_detector.py  i18n.py  i18n_configs.py  image_preprocessing.py  logger.py  monitor_utils.py  plugins_placeholder.py  pre_configs.py  python_installer.py  startup_manager.py  system_tray_connector.py  theme_connector.py  thread_pool.py  tray_manager.py  utils.py  utils_connector.py
tests/: ocr_accuracy_test.py  test_imports.py  test_integration.py  test_unit_logic.py
(+72 files in other folders)
