[project]
name = "Umi-OCR"
version = "2.1.5"
description = "免费、离线的批量OCR图片转文字工具"
readme = "README.md"
requires-python = ">=3.10"
# 仅支持 Windows 10+

dependencies = [
    # OCR Engine - PaddleOCR
    "paddlepaddle>=3.2.0",
    "paddleocr>=3.3.0",

    # PDF 处理
    "pymupdf>=1.26.0",

    # 字体子集
    "fonttools>=4.61.0",

    # 图像处理
    "pillow>=12.0.0",

    # 系统信息
    "psutil>=7.2.0",

    # 键鼠事件（替换 pynput，移除 six 依赖）
    "keyboard>=0.13.5",

    # UI 界面 (Qt6)
    "PySide6>=6.10.0",

    # 二维码解析
    "zxing-cpp>=2.3.0",

    # NumPy for PaddleOCR image processing
    "numpy>=1.24.0",

    # Optional: OpenCV for advanced image handling
    "opencv-python>=4.8.0",

    # Excel export support for table recognition
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    # 测试框架
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.3.0",

    # 代码质量工具
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",

    # 类型提示
    "types-Pillow>=10.0.0",
]

# 新架构新增依赖（将来使用）
# 以下依赖将在后续阶段逐步添加：
# - 阶段3（配置管理）: 不需要额外依赖
# - 阶段18-19（云OCR）: requests>=2.31.0, cryptography>=41.0.0
# - 阶段26（HTTP API）: fastapi>=0.109.0, uvicorn>=0.27.0
# - 阶段27（CLI）: click>=8.1.0, rich>=13.7.0
# - 阶段16（二维码）: qrcode>=7.4.0
