[project]
name = "Umi-OCR"
version = "2.1.5"
description = "免费、离线的批量OCR图片转文字工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 基础依赖（OCR引擎为可选依赖，首次运行时按需安装）

    # PDF 处理
    "pymupdf>=1.26.0",

    # 字体子集
    "fonttools>=4.61.0",

    # 图像处理
    "pillow>=12.0.0",

    # 系统信息
    "psutil>=7.2.0",

    # 键鼠事件（替换 pynput，移除 six 依赖）
    "keyboard>=0.13.5",

    # UI 界面 (Qt6)
    "PySide6>=6.10.0",

    # Qt 异步事件循环集成
    "qasync>=0.27.0",

    # 二维码解析
    "zxing-cpp>=2.3.0",

    # 二维码生成
    "qrcode>=8.0.0",

    # NumPy for OCR image processing（如果不安装PaddleOCR，某些功能可能受限）
    "numpy>=1.24.0",

    # OpenCV for advanced image handling
    "opencv-python>=4.8.0",

    # Excel export support for table recognition
    "openpyxl>=3.1.0",

    # Word 文档导出
    "python-docx>=1.2.0",

    # PDF 导出
    "reportlab>=4.0.0",

    # HTTP API 服务器
    "aiohttp>=3.9.0",

    # 云 OCR API 调用
    "requests>=2.31.0",

    # Windows 凭证管理（可选，仅 Windows）
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
# OCR 引擎（首次运行时按需安装）
# CPU 版本（默认，适合大多数用户）
cpu = [
    "paddlepaddle>=3.2.0",
    "paddleocr>=3.3.0",
]

# GPU 版本（需要 NVIDIA GPU + CUDA 驱动）
# 安装方式: pip install -e ".[gpu]"
# 或手动安装: python -m pip install paddlepaddle-gpu==3.3.0 -i https://www.paddlepaddle.org.cn/packages/stable/cu129/
gpu = [
    # GPU 版本需要手动从 PaddlePaddle 官方源安装
    # 运行: python -m pip install paddlepaddle-gpu==3.3.0 -i https://www.paddlepaddle.org.cn/packages/stable/cu129/
    # 依赖会自动安装: nvidia-cuda-runtime-cu12, nvidia-cudnn-cu12, nvidia-cublas-cu12 等
]

# 开发依赖
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.3.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-Pillow>=10.0.0",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    # 测试框架
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.3.0",

    # 代码质量工具
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",

    # 类型提示
    "types-Pillow>=10.0.0",
]

# =============================================================================
# 安装说明
# =============================================================================
#
# 1. CPU 版本（默认）:
#    pip install -e .
#
# 2. GPU 版本（需要 NVIDIA GPU + CUDA 12.9）:
#    先安装 CPU 版本: pip install -e .
#    再安装 GPU 支持: python -m pip install paddlepaddle-gpu==3.3.0 -i https://www.paddlepaddle.org.cn/packages/stable/cu129/
#
# 3. 开发环境:
#    pip install -e ".[dev]"
#
# =============================================================================
# CUDA 版本说明
# =============================================================================
# - cu129: CUDA 12.9 (最新，推荐)
# - cu118: CUDA 11.8
# - cu117: CUDA 11.7
# - cu121: CUDA 12.1
# - cu122: CUDA 12.2
#
# 其他 CUDA 版本安装命令（替换 URL 中的 cu129）:
# python -m pip install paddlepaddle-gpu==3.3.0 -i https://www.paddlepaddle.org.cn/packages/stable/cu118/
# =============================================================================
# 新架构新增依赖（将来使用）
# =============================================================================
# 以下依赖将在后续阶段逐步添加：
# - 阶段3（配置管理）: 不需要额外依赖
# - 阶段18-19（云OCR）: requests>=2.31.0, cryptography>=41.0.0
# - 阶段26（HTTP API）: fastapi>=0.109.0, uvicorn>=0.27.0
# - 阶段27（CLI）: click>=8.1.0, rich>=13.7.0
# - 阶段16（二维码）: qrcode>=7.4.0
